<resources>
    <string name="app_name">TIENDA VIDEOJUEGOS</string>
    <string name="proyecto_final">PROYECTO FINAL</string>
    <string name="tienda_de_videojuegos">TIENDA DE VIDEOJUEGOS</string>
    <string name="_2_dam_pmdm">2ºDAM - PMDM</string>
    <string name="empezar">EMPEZAR</string>
    <string name="foto_inicio">foto_inicio</string>
    <string name="nombre">DANIEL CARMONA SALAZAR</string>
    <string name="borrar_venta">BORRAR VENTA</string>
    <string name="nueva_venta">NUEVA VENTA</string>
    <string name="mostrar_informacion">MOSTRAR INFORMACIÓN</string>
    <string name="actualizar_venta">ACTUALIZAR VENTA</string>
    <string name="buscar_informacion">BUSCAR INFORMACIÓN</string>
    <string name="pokeball">pokeball</string>
    <string name="insertar_venta">INSERTAR VENTA</string>
    <string name="videojuego">VIDEOJUEGO</string>
    <string name="empleado">EMPLEADO</string>
    <string name="venta">VENTA</string>
    <string name="nombreE">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="domicilio">Domicilio:</string>
    <string name="telefono">Teléfono:</string>
    <string name="titulo">Título:</string>
    <string name="genero">Género:</string>
    <string name="pegi">PEGI:</string>
    <string name="examinar">EXAMINAR</string>
    <string name="numero_de_venta">Nº venta:</string>
    <string name="crear_venta">CREAR VENTA</string>
    <string name="mostrar_ventas">MOSTRAR VENTAS</string>
    <string name="empleado2">Empleado:</string>
    <string name="videojuego2">Videojuego:</string>
    <string name="imgrv">imgRV</string>
    <string name="refrescar">REFRESCAR</string>
    <string name="informacion_en_detalle">INFORMACIÓN EN DETALLE</string>
    <string name="logodetalle">logoDetalle</string>
    <string name="id_imagen">idImagen</string>
    <string name="item">item</string>
    <string name="introduce_el_tÍtulo_de_un_videojuego">Título de un videojuego</string>
    <string name="buscar">BUSCAR</string>
    <string name="introduce_el_nombre_de_un_empleado">Nombre de un empleado</string>
    <string name="nombre_del_empleado">Nombre del empleado:</string>
    <string name="apellidos_del_empleado">Apellidos del empleado:</string>
    <string name="t_tulo_del_videojuego">Título del videojuego</string>
    <string name="imgvideojuego">imgVideojuego</string>
    <string name="genero_videojuego">Género videojuego:</string>
    <string name="pegi_videojuego">PEGI Videojuego:</string>
    <string name="caratula_videojuego">Carátula videojuego:</string>
    <string name="textview">TextView</string>
    <string name="titulo_videojuego">Título videojuego:</string>
    <string name="nombre_empleado">Nombre empleado:</string>
    <string name="telefono_empleado">Teléfono empleado:</string>
    <string name="domicilio_empleado">Domicilio empleado:</string>
    <string name="apellidos_empleado">Apellidos empleado:</string>
    <string name="empleados">EMPLEADOS</string>
    <string name="videojuegos">VIDEOJUEGOS</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="listaEmpleados">Lista de empleados</string>
    <string name="listaVideojuegos">Lista de videojuegos</string>
    <string name="mostrar_empleados">MOSTRAR EMPLEADOS</string>
    <string name="mostrar_videojuegos">MOSTRAR VIDEOJUEGOS</string>
    <string name="ir_a_inicio">Ir a inicio</string>
</resources>