<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgVideojuego"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgrv"
            app:srcCompat="@drawable/img_no_disponible" />

        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtNVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_venta"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVideojuego"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:text="@string/videojuego2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>