<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo"
    app:cardBackgroundColor="#00FFE45B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgVideojuego"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/imgrv"
            app:srcCompat="@drawable/img_no_disponible" />

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtNVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/numero_de_venta"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVideojuego"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:padding="10dp"
                android:text="@string/videojuego2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>